# backend/internal/docs/swagger.json
@@ -2639,14 +2639,32 @@
         "internal_auth.UserDTO": {
             "type": "object",
             "properties": {
+                "avatar_relative_path": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
+                },
+                "enabled": {
+                    "type": "boolean"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "name": {
                     "type": "string"
+                },
+                "permissions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
